--- a/.github/workflows/frontend-func-tests.yml
+++ b/.github/workflows/frontend-func-tests.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Run Cypress tests
         run: npx cypress run --env type=actual ALWAYS_GENERATE_DIFF=true --spec "cypress/e2e/**/*"
         env:
-          HOME_PAGE_URL: 'https://your-home-page-url.com'
+          HOME_PAGE_URL: 'https://google.com'
