--- a/.github/workflows/frontend-func-tests.yml
+++ b/.github/workflows/frontend-func-tests.yml
@@ -18,9 +18,6 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Change directory
-        run: cd ./frontend/assignments/1
-
       - name: Install Cypress
         run: npm install cypress@13.6.3 
         
@@ -28,6 +25,6 @@ jobs:
         run: npm install cypress-visual-regression@3.0.0
 
       - name: Run Cypress tests
-        run: npx cypress run --env type=actual ALWAYS_GENERATE_DIFF=true --spec "cypress/e2e/**/*"
+        run: cd ./frontend/assignments/1 && npx cypress run --env type=actual ALWAYS_GENERATE_DIFF=true --spec "cypress/e2e/**/*"
         env:
           HOME_PAGE_URL: 'https://google.com'
