--- a/.github/workflows/frontend-func-tests.yml
+++ b/.github/workflows/frontend-func-tests.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Install Cypress
+      - name: Install cypress
         run: npm install cypress@13.6.3 
         
       - name: Install cypress visual regression plugin
         run: npm install cypress-visual-regression@3.0.0
 
-      - name: Run Cypress tests
+      - name: Run cypress tests
         run: cd ./frontend/assignments/1 && npx cypress run --env type=actual ALWAYS_GENERATE_DIFF=true --spec "cypress/e2e/**/*"
