--- a/.github/workflows/frontend-func-tests.yml
+++ b/.github/workflows/frontend-func-tests.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Install cypress visual regression plugin
         run: npm install cypress-visual-regression@3.0.0
 
-      - name: Run cypress tests
+      - name: Run all cypress tests
         run: cd ./frontend/assignments/1 && npx cypress run --env type=actual ALWAYS_GENERATE_DIFF=true --spec "cypress/e2e/**/*"
